--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "@react-navigation/bottom-tabs": "^6.6.1",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/stack": "^6.4.1",
+    "@types/chess.js": "^0.13.7",
     "axios": "^1.7.7",
+    "chess.js": "^1.0.0-beta.8",
     "expo": "~51.0.28",
     "expo-constants": "~16.0.2",
     "expo-dev-client": "~4.0.28",
@@ -33,6 +35,7 @@
     "expo-web-browser": "~13.0.3",
     "formik": "^2.4.6",
     "react": "18.2.0",
+    "react-chessboard": "^4.7.2",
     "react-dom": "18.2.0",
     "react-native": "0.74.5",
     "react-native-chessboard": "^0.1.2",
@@ -51,6 +54,7 @@
     "@babel/core": "^7.20.0",
     "@types/jest": "^29.5.12",
     "@types/react": "~18.2.45",
+    "@types/react-native-vector-icons": "^6.4.18",
     "@types/react-test-renderer": "^18.0.7",
     "jest": "^29.2.1",
     "jest-expo": "~51.0.3",
